Getting registrationId from Google Play Services

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,4 +3,8 @@
 	package="com.liferay.mobile.push">
 
 	<uses-permission android:name="android.permission.INTERNET" />
+
+	<meta-data
+		android:name="com.google.android.gms.version"
+		android:value="@integer/google_play_services_version" />
 </manifest>
