--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
+	<application />
+
 	<meta-data
 		android:name="com.google.android.gms.version"
 		android:value="@integer/google_play_services_version" />
