--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
-	<application />
-
-	<meta-data
-		android:name="com.google.android.gms.version"
-		android:value="@integer/google_play_services_version" />
+	<application>
+		<meta-data
+			android:name="com.google.android.gms.version"
+			android:value="6587000" />
+	</application>
 </manifest>
