--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
 	package="com.liferay.mobile.push">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 
 	<application>
 		<meta-data
+			tools:replace="android:value"
 			android:name="com.google.android.gms.version"
-			android:value="6587000" />
+			android:value="@integer/google_play_services_version" />
 	</application>
 </manifest>
