--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,8 @@ dependencies {
 	compile group: 'com.squareup', name: 'otto', version: '1.3.6'
 
 	testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile group: 'org.robolectric', name: 'robolectric', version: '2.4'
+	testCompile group: 'org.mockito', name: 'mockito-core', version: '1.+'
+	testCompile group: 'org.robolectric', name: 'robolectric', version: '2.4'
 }
 
 buildscript {
