--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ buildscript {
 	}
 
 	dependencies {
-		classpath 'com.android.tools.build:gradle:1.1.2'
+		classpath 'com.android.tools.build:gradle:1.1.3'
 		classpath 'com.github.dcendents:android-maven-plugin:1.2'
 	}
 }
@@ -46,6 +46,10 @@ android {
 	sourceSets {
 		main {
 			java.srcDirs += 'src/gen/java'
+		}
+
+		test {
+			java.srcDirs += 'build/generated/source/r/debug'
 		}
 	}
 }
