--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: android
 
 script:
   - cd library
-  - ../gradlew assembleDebug testDebug
+  - ../gradlew assembleDebug testDebug coverage
+
+after_success:
+  - ../gradlew coveralls
