--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,23 @@
+buildscript {
+    repositories {
+        google()
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
+    }
+}
+
 allprojects {
-	repositories {
-		mavenLocal()
-		jcenter()
-		mavenCentral()
-	}
+    repositories {
+        jcenter()
+        google()
+    }
 }
 
 task wrapper(type: Wrapper) {
-	gradleVersion = '2.3'
+    gradleVersion = '2.3'
 }
