--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ android:
   components:
     - tools
     - build-tools-25.0.0
+    - build-tools-26.0.2
     - platform-tools
     - android-21
     - extra-google-m2repository
