--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,11 +40,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile('com.liferay.mobile:liferay-push:1.1.1') {
+    implementation('com.liferay.mobile:liferay-push:1.1.1') {
         exclude group: 'com.google.android'
     }
 
-    compile 'com.android.support:support-annotations:26.1.0'
+
+    implementation 'com.android.support:support-annotations:26.1.0'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.11.0'
