--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,57 +1,60 @@
 apply plugin: 'com.android.application'
 
 buildscript {
-    repositories {
-        jcenter()
-        mavenCentral()
-        google()
-    }
+	repositories {
+		jcenter()
+		mavenCentral()
+		google()
+	}
 
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
-    }
+	dependencies {
+		classpath 'com.android.tools.build:gradle:3.5.1'
+		classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
+	}
 }
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion '29.0.2'
-    defaultConfig {
-        applicationId 'com.nhpatt.pushexample'
-        minSdkVersion 16
-        targetSdkVersion 29
-        versionCode 1
-        versionName '1.0'
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    testOptions.unitTests.includeAndroidResources true
+	compileSdkVersion 29
+	buildToolsVersion '29.0.2'
+	defaultConfig {
+		applicationId 'com.nhpatt.pushexample'
+		minSdkVersion 16
+		targetSdkVersion 29
+		versionCode 1
+		versionName '1.0'
+		testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+	}
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+		}
+	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
+	testOptions.unitTests.includeAndroidResources true
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation('com.liferay.mobile:liferay-push:1.3.0') {
-        exclude group: 'com.google.android'
-    }
+	implementation('com.liferay.mobile:liferay-push:1.3.0')
 
-    implementation 'androidx.annotation:annotation:1.1.0'
+	implementation('com.liferay.mobile:liferay-android-sdk-core:7.1.+') {
+		exclude group: 'com.google.android'
+		exclude module: 'customtabs'
+	}
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation 'org.mockito:mockito-core:2.11.0'
-    testImplementation 'org.robolectric:robolectric:3.6.1'
+	implementation 'androidx.annotation:annotation:1.1.0'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+	testImplementation 'junit:junit:4.12'
+	testImplementation 'org.mockito:mockito-core:2.11.0'
+	testImplementation 'org.robolectric:robolectric:3.6.1'
+
+	androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
 
