--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ buildscript {
 	dependencies {
 		classpath 'com.android.tools.build:gradle:3.5.3'
 		classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
+		classpath 'com.google.gms:google-services:4.3.4'
 		classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
 	}
 }
@@ -57,4 +58,6 @@ dependencies {
 	androidTestImplementation 'androidx.test.ext:junit:1.1.1'
 	androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
 
